syntax = "proto3";

package message;

option go_package = "github.com/haowei703/webrtc-server/proto";

service MessageExchange {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  bytes video_frame = 1;
  int32 width = 2;
  int32 height = 3;
}

message MessageResponse {
  string result = 1;
}